samples/_failures_safe/1761219431_e2be33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66212b59.c: In function ‘main’:
./samples/SAFE/__tmp_66212b59.c:131:28: error: expected ‘)’ at end of input
  131 |     add_log_entry(&analyzer
      |                  ~         ^
      |                            )
./samples/SAFE/__tmp_66212b59.c:131:5: error: too few arguments to function ‘add_log_entry’
  131 |     add_log_entry(&analyzer
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_66212b59.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_66212b59.c:131:5: error: expected declaration or statement at end of input
  131 |     add_log_entry(&analyzer
      |     ^~~~~~~~~~~~~
